--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "tiny-cookie": "^2.1.2",
     "vee-validate": "^2.1.0-beta.2",
     "vue": "^2.5.16",
+    "vue-multiselect": "^2.1.0",
     "vue-router": "^3.0.1",
+    "vue2-timepicker": "^0.1.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
