--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "buefy": "^0.6.6",
     "jwt-decode": "^2.2.0",
     "tiny-cookie": "^2.1.2",
     "vee-validate": "^2.1.0-beta.2",
